[workspace]
members = [ 
    "packages/cli",
    "packages/exstractor",
    "packages/exstructs", 
    "packages/llvmutils",
    "packages/symlist",
    "packages/tyyaml",
    "packages/utils",
]
resolver = "2"

[workspace.dependencies.cu]
package = "pistonite-cu"
version = "0.7.4"
# path = "../cu/packages/copper"

[workspace.dependencies]
fxhash = "0.2.1"
serde = "1"
dashmap = { version = "6.1.0", features = ["serde"] }
shell-words = "1.1.0"
regex = "1.11.1"
